# pq-dashboard

./: .dockerignore  .gitignore  .pq-dash.env  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
pq_dashboard/: config.py  connection.py  main.py
pq_dashboard/cli/: __init__.py  commands.py
pq_dashboard/data/: items.py  queues.py
pq_dashboard/frontend/: README.md  esbuild.config.js  esbuild.proxy.js  package-lock.json  package.json  tailwind.config.js
pq_dashboard/frontend/src/: App.tsx  AppSettings.tsx  AppToastContainer.tsx  ItemsTable.tsx  Pagination.tsx  QueueName.tsx  QueuesTable.tsx  RefreshRatePicker.tsx  ToggleSwitch.tsx  index.css  index.tsx
pq_dashboard/frontend/src/hooks/: index.ts  items.ts  queues.ts  settings.ts
pq_dashboard/frontend/www/: index.html
pq_dashboard/frontend/www/assets/: ReactToastify.css
pq_dashboard/routers/: health.py  items.py  queues.py
pq_dashboard/schema/: item.py  queue.py
scripts/: build-image.sh  build-packages.sh  publish-packages.sh
tests/: conftest.py  test_health.py  test_items.py  test_pq_dashboard.py  test_queues.py
